# knowledge

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  faq.md  getting-started.md  index.md  plugin_guide.md  user_guide.md
docs/adr/: 0002-bundle-format-v0-1.md
examples/: basic_usage.py
examples/google-python-style-guide/: CERTIFICATION.md  index.md  parting-words.md
examples/google-python-style-guide/rules/language/: comprehensions.md  conditional-expressions.md  decorators.md  default-argument-values.md  default-iterators-operators.md  exceptions.md  generators.md  imports.md  index.md  lambda-functions.md  lexical-scoping.md  lint.md  modern-python.md  mutable-global-state.md  nested-classes-functions.md  packages.md  power-features.md  properties.md  threading.md  truefalse-evaluations.md  type-annotated-code.md
examples/google-python-style-guide/rules/style/: blank-lines.md  error-messages.md  files-sockets.md  function-length.md  getters-setters.md  imports-formatting.md  indentation.md  index.md  line-length.md  logging.md  main.md  parentheses.md  semicolons.md  shebang-line.md  statements.md  strings.md  todo-comments.md  trailing-commas.md  whitespace.md
examples/google-python-style-guide/rules/style/documentation/: block-inline-comments.md  classes.md  docstrings.md  functions-and-methods.md  index.md  modules.md  overridden-methods.md  punctuation-grammar.md  test-modules.md
examples/google-python-style-guide/rules/style/naming/: file-naming.md  guido-recommendations.md  index.md  mathematical-notation.md  names-to-avoid.md  naming-conventions.md  naming.md
examples/google-python-style-guide/rules/style/type-annotations/: build-dependencies.md  circular-dependencies.md  conditional-imports.md  default-values.md  forward-declarations.md  general-rules.md  generics.md  ignoring-types.md  imports-for-typing.md  index.md  line-breaking.md  nonetype.md  string-types.md  tuples-vs-lists.md  type-aliases.md  type-variables.md  typing-variables.md
knowledge/: __init__.py  cli.py  engine.py  exceptions.py  extensions.py  models.py  sdk.py  util.py
knowledge/extraction/: extractors.py  sources.py
knowledge/kmd/: bundle.py
knowledge/llm/: __init__.py  extractor.py  manager.py
knowledge/models/: __init__.py  base.py  concept.py  entity.py  evidence.py  fact.py  graph.py  relationship.py  verification.py
knowledge/normalization/: __init__.py  aliases.py  dedup.py  identifiers.py
knowledge/okf/: __init__.py  parser.py  serializer.py
knowledge/passes/: __init__.py  analysis_pass.py  base.py  consistency_pass.py  diagnostics.py  extraction_pass.py  manager.py  normalization_passes.py  repair_passes.py  schema_pass.py  scoring.py  scoring_pass.py  structural_pass.py  verification_passes.py
knowledge/verification/: __init__.py  reasoning.py
tests/: test_bundle.py  test_cli.py  test_engine.py  test_exceptions.py  test_extensions.py  test_extraction.py  test_import.py  test_models.py  test_normalization.py  test_okf.py  test_passes.py  test_sdk.py  test_verification.py
