[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge"
version = "0.1.0"
description = "An open-source Python SDK for creating, maintaining, verifying, and evolving Open Knowledge Format (OKF) documents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["knowledge", "okf", "knowledge-graph", "knowledge-engineering"]
authors = [
    { name = "knowledge contributors" },
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/knowledge"
Documentation = "https://knowledge-sdk.dev"
Source = "https://github.com/anomalyco/knowledge"
Issues = "https://github.com/anomalyco/knowledge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
